--- a/Code Repository Chris Karvelas.ipynb
+++ b/Code Repository Chris Karvelas.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 47,
    "id": "e8f6df58-74c2-42a3-98d5-3ad9d965cfff",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.828406572341919\n"
+      "0.7889904975891113\n"
      ]
     }
    ],
@@ -119,7 +119,7 @@
     "    if i%16==14:\n",
     "        if i !=414:\n",
     "        \n",
-    "# file path of each image, W2023_ is part of the name of each image, str(i) provides the page number of the particular solution\n",
+    "# file path of each image, W2023_ is part of each image name, str(i) provides the page number of the particular solution\n",
     "            src_path = r\"C:\\Users\\CK\\Desktop\\DATA4010 Project\\Old Tests\\Winter 2023\\Winter2023\\Tests\\W2023_\"+str(i)+\".jpg\"\n",
     "            shutil.move(src_path, dst_path)\n",
     "    elif i==416:\n",
