--- a/Code Repository Chris Karvelas.ipynb
+++ b/Code Repository Chris Karvelas.ipynb
@@ -125,8 +125,9 @@
     "    elif i==416:\n",
     "        src_path = r\"C:\\Users\\CK\\Desktop\\DATA4010 Project\\Old Tests\\Winter 2023\\Winter2023\\Tests\\W2023_\"+str(i)+\".jpg\"\n",
     "        shutil.move(src_path, dst_path)\n",
-    "        # NOTE, page 416 was an anomolous scanning that was out of order, but after its booklet the previous math did not change\n",
-    "        # We do not move page 414, as it is not a Q9 answer\n",
+    "        \n",
+    "# NOTE, page 416 was an anomolous scanning that was out of order, but after its booklet the previous math did not change\n",
+    "# We do not move page 414, as it is not a Q9 answer\n",
     "\n",
     "for i in range(2047,7855):\n",
     "     if i%16==12:\n",
@@ -620,13 +621,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 48,
    "id": "2d06c4ed-e7d6-44a3-a499-0b84ee9da307",
    "metadata": {},
    "outputs": [],
    "source": [
     "# file path of any one image, to get the dimensions\n",
-    "im=skimage.io.imread(r\"C:\\Users\\CK\\Desktop\\DATA4010 Project\\Old Tests\\Crowdmark\\Ungraded\\Finals\\Questions\\Q2\\Resized\\All Resized\\001.jpg\")\n",
+    "im=skimage.io.imread(\n",
+    "    r\"C:\\Users\\CK\\Desktop\\DATA4010 Project\\Old Tests\\Crowdmark\\Ungraded\\Finals\\Questions\\Q2\\Resized\\All Resized\\001.jpg\")\n",
     "num_rows, num_cols = im.shape\n",
     "\n",
     "size=num_rows*num_cols\n",
