--- a/Code Repository Chris Karvelas.ipynb
+++ b/Code Repository Chris Karvelas.ipynb
@@ -1493,25 +1493,25 @@
     }
    ],
    "source": [
-    "Q1_no_train=[]\n",
+    "Q1_no_train=[] # create a variable to store the grades\n",
     "val=0\n",
     "start=time.time()\n",
-    "for dat in combined_strings:\n",
+    "for dat in combined_strings:# loop through testing data\n",
     "    \n",
     "    val=val+1\n",
     "    print(val)# tracker to ensure loop is working\n",
-    "    response = client.chat.completions.create(\n",
-    "      model=\"gpt-4\",\n",
+    "    response = client.chat.completions.create(# this function interfaces with ChatGPT\n",
+    "      model=\"gpt-4\", # specify which ChatGPT model you are using\n",
     "      messages=[\n",
-    "          {\"role\": \"system\", \"content\": instructions},\n",
-    "          {\"role\": \"user\", \"content\": dat},\n",
+    "          {\"role\": \"system\", \"content\": instructions}, # provide the prompt\n",
+    "          {\"role\": \"user\", \"content\": dat}, #provide the answers to grade\n",
     "      ]\n",
     "    )\n",
     "    \n",
     "\n",
     "\n",
-    "    classification=response.choices[0].message.content\n",
-    "    Q1_no_train.append(classification)\n",
+    "    classification=response.choices[0].message.content # get the grade(s) outputted by the model \n",
+    "    Q1_no_train.append(classification) #add the grade(s) to the dataset\n",
     "end=time.time()\n",
     "print(str(end-start) + \" seconds\")"
    ]
