--- a/Code Repository Chris Karvelas.ipynb
+++ b/Code Repository Chris Karvelas.ipynb
@@ -69,7 +69,8 @@
     "\n",
     "# 8) LLM\n",
     "import openai\n",
-    "from openai import OpenAI\n"
+    "from openai import OpenAI\n",
+    "\n"
    ]
   },
   {
@@ -119,7 +120,7 @@
     "    if i%16==14:\n",
     "        if i !=414:\n",
     "        \n",
-    "# file path of each image, W2023_ is part of each image name, str(i) provides the page number of the particular solution\n",
+    "# file path of each image, W2023_ is part of each image name, str(i) provides the page number of the np.random\n",
     "            src_path = r\"C:\\Users\\CK\\Desktop\\DATA4010 Project\\Old Tests\\Winter 2023\\Winter2023\\Tests\\W2023_\"+str(i)+\".jpg\"\n",
     "            shutil.move(src_path, dst_path)\n",
     "    elif i==416:\n",
@@ -1405,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 49,
    "id": "21242c5b-d2b3-4bcd-9d8e-43310f0ea155",
    "metadata": {},
    "outputs": [],
@@ -1424,7 +1425,7 @@
     "w_data = np.array(w_data)# ensure it is a numpy array for shuffling\n",
     "target_w = np.array(target_w)\n",
     "\n",
-    "\n",
+    "random_state=42# set for reproducibility on the split\n",
     "num_samp=len(w_data)\n",
     "# random permutation since we have no training data we can't do train-test split\n",
     "random_indices = np.random.permutation(num_samp)\n",
@@ -1744,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 50,
    "id": "58883828-5ff3-47ce-9f9a-64e7e809f296",
    "metadata": {},
    "outputs": [],
@@ -1760,7 +1761,7 @@
     "w_data = np.array(w_data)\n",
     "target_w = np.array(target_w)\n",
     "\n",
-    "\n",
+    "random_state=42\n",
     "num_samp=len(w_data)\n",
     "random_indices = np.random.permutation(num_samp)\n",
     "X_test=w_data[random_indices]\n",
